fix: add configurable CORS allowed origins
- Add cors.allowed-origins property to application.yml
- Update SecurityConfig to read origins from configuration
- Support comma-separated multiple origins via CORS_ALLOWED_ORIGINS env var

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>